@@ -1,3 +1,8 @@
+2006-09-15  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/29051
+	* gfortran.dg/oldstyle_3.f90: New test.
+
 2006-09-12  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/pr28243.c: New test.
